--- a/TASK_1/Portfolio-1.html
+++ b/TASK_1/Portfolio-1.html
@@ -173,11 +173,11 @@
 </div>
 </div>
 <div class="bottom-container">
-<a class="footer-link" href="">Instagram</a>
-<a class="footer-link" href="https://twitter.com/"></a>
-<a class="footer-link" href="">Website</a>
-<div class="footer"><p>© KARTHIKEYA SAI.</p></div>
-</div>
+<a class="footer-link" href=""><img src="Instagram icon.png" class="footer-icons"></a>
+<a class="footer-link" href=""><img src="Github icon.png" class="footer-icons"></a>
+<a class="footer-link" href=""><img src="Linkedin logo.png" class="footer-icons"></a>
+</div> <div class="footer"><p>© KARTHIKEYA SAI.</p></div>
+
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
